fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -267,10 +267,13 @@ nav a:hover {
 .total {
   position: fixed;
   bottom: 0;
-  padding: 30px;
-  padding-left: 15px;
+  left: 0;
+  padding: 20px;
   width: 100%;
   background-color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .filter-container {
@@ -311,11 +314,56 @@ nav a:hover {
     position: fixed;
     bottom: 0;
     left: 0;
-    padding: 5px;
+    padding: 10px;
     width: 100%;
     background-color: #fff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
-  .total h5 {
-    margin-left: 2.5rem;
+}
+
+.checkout-modal-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 2rem;
+  padding: 10px;
+  justify-content: space-between;
+}
+
+#checkout {
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 2;
+}
+
+.checkout-img {
+  width: 100px;
+}
+
+.item-body {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  padding: 20px;
+}
+
+@media only screen and (max-width: 450px) {
+  .checkout-modal-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 1rem;
+    padding: 10px;
+    justify-content: space-between;
+  }
+
+  .footer-buttons {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+  #f-btn {
+    width: 100px;
   }
 }
